--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
       // Surah List Metadata
       const SURAHS_LIST = [
-        { id: 36, name: "Yaa-Seen", ar: "يس", verses: 83, pageId: 'pquran_36' },
-        { id: 48, name: "Al Fath", ar: "الفتح", verses: 29, pageId: 'pquran_48' },
-        { id: 55, name: "Ar-Rahman", ar: "الرحمن", verses: 78, pageId: 'pquran_55' },
-        { id: 56, name: "Al-Waqi'ah", ar: "الواقعة", verses: 96, pageId: 'pquran_56' },
-        { id: 67, name: "Al-Mulk", ar: "الملك", verses: 30, pageId: 'pquran_67' },
-        { id: 73, name: "Al-Muzzammil", ar: "المزمل", verses: 20, pageId: 'pquran_73' }
-      ];
-
+  { id: 36, name: "Yaa-Seen", ar: "يس", verses: 83, pageId: 'pquran_36' },
+  { id: 48, name: "Al Fath", ar: "الفتح", verses: 29, pageId: 'pquran_48' },
+  { id: 50, name: "Al-Kahf", ar: "ق", verses: 45, pageId: 'pquran_50' },        
+  { id: 55, name: "Ar-Rahman", ar: "الرحمن", verses: 78, pageId: 'pquran_55' },
+  { id: 56, name: "Al-Waqi'ah", ar: "الواقعة", verses: 96, pageId: 'pquran_56' },
+  { id: 67, name: "Al-Mulk", ar: "الملك", verses: 30, pageId: 'pquran_67' },
+  { id: 73, name: "Al-Muzzammil", ar: "المزمل", verses: 20, pageId: 'pquran_73' }
+];
       // Helper Functions
       const createNameEntry = (num, arabic, english) => [{ type: 'allah-name', number: num, arabic: arabic, english: english }];
       const createProphetName = (num, arabic, english) => [{ type: 'allah-name', number: num, arabic: arabic, english: english }];
@@ -717,11 +717,110 @@
                 { type: 'arabic', text: 'مُّحَمَّدٌ رَّسُولُ اللَّهِ ۚ وَالَّذِينَ مَعَهُ أَشِدَّاءُ عَلَى الْكُفَّارِ رُحَمَاءُ بَيْنَهُمْ ۖ تَرَاهُمْ رُكَّعًا سُجَّدًا يَبْتَغُونَ فَضْلًا مِّنَ اللَّهِ وَرِضْوَانًا ۖ سِيمَاهُمْ فِي وُجُوهِهِم مِّنْ أَثَرِ السُّجُودِ ۚ ذَٰلِكَ مَثَلُهُمْ فِي التَّوْرَاةِ ۚ وَمَثَلُهُمْ فِي الْإِنجِيلِ كَزَرْعٍ أَخْرَجَ شَطْأَهُ فَآزَرَهُ فَاسْتَغْلَظَ فَاسْتَوَىٰ عَلَىٰ سُوقِهِ يُعْجِبُ الزُّرَّاعَ لِيَغِيظَ بِهِمُ الْكُفَّارَ ۗ وَعَدَ اللَّهُ الَّذِينَ آمَنُوا وَعَمِلُوا الصَّالِحَاتِ مِنْهُم مَّغْفِرَةً وَأَجْرًا عَظِيمًا' },
                 { type: 'text', text: '29] Mohammed (peace and blessings be upon him) is the Noble Messenger of Allah; and his companions are stern with the disbelievers and merciful among themselves - you will see them bowing and falling in prostration, seeking Allah’s munificence and His pleasure; their signs are on their faces, from the effects of prostrations; this trait of theirs is mentioned in the Taurat; and their trait is mentioned in the Injeel; like a cultivation that sprouted its shoot, then strengthened it, then thickened and then stood firm upon its stem, pleasing the farmer - in order to enrage the disbelievers with them; Allah has promised forgiveness and a great reward to those among them who have faith and do good deeds.' }
               ]
-            },
+            }, // <--- This comma connects Al-Fath to Surah Qaf
             {
-            
-                audio1: 'https://server8.mp3quran.net/afs/055.mp3', // Alafasy
-              audio2: 'https://server10.mp3quran.net/minsh/055.mp3', // Al-Minshawi
+              audio1: 'https://server8.mp3quran.net/afs/050.mp3',
+              audio2: 'https://server10.mp3quran.net/minsh/050.mp3',
+              content: [
+                { type: 'section-title', text: 'SURAH Kahf' },
+                { type: 'text', text: '(Revealed at Mecca - contains 45 verses)' },
+                { type: 'arabic', text: 'بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ' },
+                { type: 'text', text: 'Allah - beginning with the name of - the Most Gracious, the Most Merciful' },
+                { type: 'arabic', text: 'قٓ ۚ وَالْقُرْاٰنِ الْمَجِيْدِ ۚ' },
+                { type: 'text', text: ':1] Qaf; by oath of the Glorious Qur’an.' },
+                { type: 'arabic', text: 'بَلْ عَجِبُوْۤا اَنْ جَآءَهُمْ مُّنْذِرٌ مِّنْهُمْ فَقَالَ الْكٰفِرُوْنَ هٰذَا شَیْءٌ عَجِيْبٌ ۖ' },
+                { type: 'text', text: ':2] Rather they were shocked that a Herald of Warning came to them from among themselves, so the disbelievers said, “This is something really strange.”' },
+                { type: 'arabic', text: 'ءَاِذَا مِتْنَا وَكُنَّا تُرَابًا ۚ ذٰلِكَ رَجْعٌۢ بَعِيْدٌ' },
+                { type: 'text', text: ':3] “When we are dead and have turned to dust, will we be raised again? That return is impossible!”' },
+                { type: 'arabic', text: 'قَدْ عَلِمْنَا مَا تَنْقُصُ الْاَرْضُ مِنْهُمْ ۚ وَعِنْدَنَا كِتٰبٌ حَفِيْظٌ' },
+                { type: 'text', text: ':4] We know all what the earth decreases from them; and with Us is a Book that retains.' },
+                { type: 'arabic', text: 'بَلْ كَذَّبُوْا بِالْحَقِّ لَمَّا جَآءَهُمْ فَهُمْ فِیْۤ اَمْرٍ مَّرِيْجٍ' },
+                { type: 'text', text: ':5] In fact they denied the Truth when it came to them, so they are now in a dilemma.' },
+                { type: 'arabic', text: 'اَفَلَمْ يَنْظُرُوْۤا اِلَى السَّمَآءِ fَوْقَهُمْ كَيْفَ بَنَيْنٰهَا وَزَيَّنّٰهَا وَمَا لَهَا مِنْ fُرُوْجٍ' },
+                { type: 'text', text: ':6] So did they not see the sky above them - how We have made it and beautified it, and there are no cracks in it?' },
+                { type: 'arabic', text: 'وَالْاَرْضَ مَدَدْنٰهَا وَاَلْقَيْنَا فِيْهَا رَوَاسِیَ وَاَنْبَتْنَا فِيْهَا مِنْ كُلِّ زَوْجٍۢ بَهِيْجٍ ۙ' },
+                { type: 'text', text: ':7] And (how) We have spread the earth, and placed mountains as anchors in it, and have grown all kinds of beautiful pairs in it?' },
+                { type: 'arabic', text: 'تَبْصِرَةً وَّذِكْرٰی لِكُلِّ عَبْدٍ مُّنِيْبٍ' },
+                { type: 'text', text: ':8] A perception and an understanding, for every bondman who inclines.' },
+                { type: 'arabic', text: 'وَنَزَّلْنَا مِنَ السَّمَآءِ مَآءً مُّبٰرَكًا fَاَنْبَتْنَا بِهٖ جَنّٰتٍ وَّحَبَّ الْحَصِيْدِ ۙ' },
+                { type: 'text', text: ':9] And We sent down the auspicious water from the sky, therefore producing gardens with it, and the grain that is harvested.' },
+                { type: 'arabic', text: 'وَالنَّخْلَ بَاسِقٰتٍ لَّهَا طَلْعٌ نَّضِيْدٌ ۙ' },
+                { type: 'text', text: ':10] And high date-palms with lush fruit.' },
+                { type: 'arabic', text: 'رِّزْقًا لِّلْعِبَادِ ۙ وَاَحْيَيْنَا بِهٖ بَلْدَةً مَّيْتًا ؕ كَذٰلِكَ الْخُرُوْجُ' },
+                { type: 'text', text: ':11] As sustenance for the bondmen; and with it We revived a dead city; this is how you will be raised.' },
+                { type: 'arabic', text: 'كَذَّبَتْ قَبْلَهُمْ قَوْمُ نُوْحٍ وَّاَصْحٰبُ الرَّسِّ وَثَمُوْدُ ۙ' },
+                { type: 'text', text: ':12] Before these, the people of Nooh had denied, and so did the dwellers of Rass and the Thamud.' },
+                { type: 'arabic', text: 'وَعَادٌ وَّfِرْعَوْنُ وَاِخْوَانُ لُوْطٍ ۙ' },
+                { type: 'text', text: ':13] And the tribe of A’ad, and Firaun, and the fellowmen of Lut.' },
+                { type: 'arabic', text: 'وَاَصْحٰبُ الْاَيْكَةِ وَقَوْمُ تُبَّعٍ ؕ كُلٌّ كَذَّبَ الرُّسُلَ fَحَقَّ وَعِيْدِ' },
+                { type: 'text', text: ':14] And the Dwellers of the Woods, and the people of Tubb’a; each one of them one denied the Noble Messengers, so My promised punishment proved true.' },
+                { type: 'arabic', text: 'اَفَعَيِيْنَا بِالْخَلْقِ الْاَوَّلِ ؕ بَلْ هُمْ fِیْ لَبْسٍ مِّنْ خَلْقٍ جَدِيْدٍ' },
+                { type: 'text', text: ':15] So did We tire by creating the first time? Rather they doubt in being created again.' },
+                { type: 'arabic', text: 'وَلَقَدْ خَلَقْنَا الْاِنْسَانَ وَنَعْلَمُ مَا تُوَسْوِسُ بِهٖ نَفْسُهٗ ۖۚ وَنَحْنُ اَقْرَبُ اِلَيْهِ مِنْ حَبْلِ الْوَرِيْدِ' },
+                { type: 'text', text: ':16] And indeed We have created man and We know what his soul instils in him; and We are nearer to him than the heart’s artery.' },
+                { type: 'arabic', text: 'اِذْ يَتَلَقَّى الْمُتَلَقِّيٰنِ عَنِ الْيَمِيْنِ وَعَنِ الشِّمَالِ قَعِيْدٌ' },
+                { type: 'text', text: ':17] When the two receiving angels receive from him, one seated on the right and one on the left.' },
+                { type: 'arabic', text: 'مَا يَلْfِظُ مِنْ قَوْلٍ اِلَّا لَدَيْهِ رَقِيْبٌ عَتِيْدٌ' },
+                { type: 'text', text: ':18] He does not utter a single word, without a ready recorder seated next to him.' },
+                { type: 'arabic', text: 'وَجَآءَتْ سَكْرَةُ الْمَوْتِ بِالْحَقِّ ؕ ذٰلِكَ مَا كُنْتَ مِنْهُ تَحِيْدُ' },
+                { type: 'text', text: ':19] And the hardship of death came with the truth; “This is what you were escaping from!”' },
+                { type: 'arabic', text: 'وَنُfِخَ fِی الصُّوْرِ ؕ ذٰلِكَ يَوْمُ الْوَعِيْدِ' },
+                { type: 'text', text: ':20] And the Trumpet was blown; “This is the Day of the promised punishment.”' },
+                { type: 'arabic', text: 'وَجَآءَتْ كُلُّ نَفْسٍ مَّعَهَا سَآئِقٌ وَّشَهِيْدٌ' },
+                { type: 'text', text: ':21] And every soul came, along with a herder and a witness.' },
+                { type: 'arabic', text: 'لَقَدْ كُنْتَ fِیْ غَفْلَةٍ مِّنْ هٰذَا fَكَشَفْنَا عَنْكَ غِطَآءَكَ fَبَصَرُكَ الْيَوْمَ حَدِيْدٌ' },
+                { type: 'text', text: ':22] “You were indeed neglectful of this, so We have removed the veil for you, and your eyesight is sharp this day.”' },
+                { type: 'arabic', text: 'وَقَالَ قَرِيْنُهٗ هٰذَا مَا لَدَیَّ عَتِيْدٌ ؕ' },
+                { type: 'text', text: ':23] And his accompanying angel said, “This is the record of your deeds, available with me.”' },
+                { type: 'arabic', text: 'اَلْقِيَا fِیْ جَهَنَّمَ كُلَّ كَفَّارٍ عَنِيْدٍ ۙ' },
+                { type: 'text', text: ':24] It will be said to the angels, “Both of you fling every excessive ungrateful, stubborn person into hell.”' },
+                { type: 'arabic', text: 'مَّنَّاعٍ لِّلْخَيْرِ مُعْتَدٍ مُّرِيْبٍ ۙ' },
+                { type: 'text', text: ':25] “The one who excessively prevented from virtue, the transgressor, the doubtful.”' },
+                { type: 'arabic', text: 'الَّذِیْ جَعَلَ مَعَ اللّٰهِ اِلٰهًا اٰخَرَ fَاَلْقِيٰهُ fِی الْعَذَابِ الشَّدِيْدِ' },
+                { type: 'text', text: ':26] “The one who appointed another God along with Allah – so both of you fling him into the severe punishment.”' },
+                { type: 'arabic', text: 'قَالَ قَرِيْنُهٗ رَبَّنَا مَاۤ اَطْغَيْتُهٗ وَلٰكِنْ كَانَ fِیْ ضَلٰلٍۢ بَعِيْدٍ' },
+                { type: 'text', text: ':27] His accompanying devil said, “Our Lord! I did not cause him to rebel, but he himself was in extreme error.”' },
+                { type: 'arabic', text: 'قَالَ لَا تَخْتَصِمُوْا لَدَیَّ وَقَدْ قَدَّمْتُ اِلَيْكُمْ بِالْوَعِيْدِ' },
+                { type: 'text', text: ':28] He will say, “Do not dispute before Me – I had already warned you of the punishment.”' },
+                { type: 'arabic', text: 'مَا يُبَدَّلُ الْقَوْلُ لَدَیَّ وَمَاۤ اَنَا بِظَلَّامٍ لِّلْعَبِيْدِ' },
+                { type: 'text', text: ':29] “With Me, the decree does not change, and nor do I oppress the bondmen.”' },
+                { type: 'arabic', text: 'يَوْمَ نَقُوْلُ لِجَهَنَّمَ هَلِ امْتَلَاْتِ وَتَقُوْلُ هَلْ مِنْ مَّزِيْدٍ' },
+                { type: 'text', text: ':30] The day when We will ask hell, “Are you filled up?” and it will answer, “Are there some more?”' },
+                { type: 'arabic', text: 'وَاُزْلِfَتِ الْجَنَّةُ لِلْمُتَّقِيْنَ غَيْرَ بَعِيْدٍ' },
+                { type: 'text', text: ':31] And Paradise will be brought close to the pious, not far away from them.' },
+                { type: 'arabic', text: 'هٰذَا مَا تُوْعَدُوْنَ لِكُلِّ اَوَّابٍ حَفِيْظٍ ۚ' },
+                { type: 'text', text: ':32] This is what you are promised – for every repenting, careful person.' },
+                { type: 'arabic', text: 'مَنْ خَشِيَ الرَّحْمٰنَ بِالْغَيْبِ وَجَآءَ بِقَلْبٍ مُّنِيْبٍ ۙ' },
+                { type: 'text', text: ':33] Who fears the Most Gracious without seeing, and came with a heart that inclines.' },
+                { type: 'arabic', text: 'اُدْخُلُوْهَا بِسَلٰمٍ ؕ ذٰلِكَ يَوْمُ الْخُلُوْدِ' },
+                { type: 'text', text: ':34] It will be said to him, “Enter it in peace; this is the day of eternity.”' },
+                { type: 'arabic', text: 'لَهُمْ مَّا يَشَآءُوْنَ fِيْهَا وَلَدَيْنَا مَزِيْدٌ' },
+                { type: 'text', text: ':35] In it for them is all that they may desire, and with Us is more than it.' },
+                { type: 'arabic', text: 'وَكَمْ اَهْلَكْنَا قَبْلَهُمْ مِّنْ قَرْنٍ هُمْ اَشَدُّ مِنْهُمْ بَطْشًا fَنَقَّبُوْا fِی الْبِلَادِ ؕ هَلْ مِنْ مَّحِيْصٍ' },
+                { type: 'text', text: ':36] And many a generation We did destroy before them, who exceeded them in strength, therefore venturing in the cities! Is there a place to escape?' },
+                { type: 'arabic', text: 'اِنَّ fِیْ ذٰلِكَ لَذِكْرٰی لِمَنْ كَانَ لَهٗ قَلْبٌ اَوْ اَلْقَى السَّمْعَ وَهُوَ شَهِيْدٌ' },
+                { type: 'text', text: ':37] Indeed in this is an advice for anyone who keeps a heart, or listens attentively.' },
+                { type: 'arabic', text: 'وَلَقَدْ خَلَقْنَا السَّمٰوٰتِ وَالْاَرْضَ وَمَا بَيْنَهُمَا fِیْ سِتَّةِ اَيَّامٍ ۖ وَمَا مَسَّنَا مِنْ لُّغُوْبٍ' },
+                { type: 'text', text: ':38] And We have indeed created the heavens and the earth, and all what is between them, in six days; and fatigue did not even approach Us.' },
+                { type: 'arabic', text: 'fَاصْبِرْ عَلٰی مَا يَقُوْلُوْنَ وَسَبِّحْ بِحَمْدِ رَبِّكَ قَبْلَ طُلُوْعِ الشَّمْسِ وَقَبْلَ الْغُرُوْبِ ۚ' },
+                { type: 'text', text: ':39] Therefore (O dear prophet Mohammed) patiently bear upon what they say, and praising your Lord say His Purity before the sun rises and before the sun sets.' },
+                { type: 'arabic', text: 'وَمِنَ الَّيْلِ fَسَبِّحْهُ وَاَدْبَارَ السُّجُوْدِ' },
+                { type: 'text', text: ':40] And say His Purity during the night, and after the customary prayers.' },
+                { type: 'arabic', text: 'وَاسْتَمِعْ يَوْمَ يُنَادِ الْمُنَادِ مِنْ مَّكَانٍ قَرِيْبٍ' },
+                { type: 'text', text: ':41] And listen attentively on the day when an announcer will proclaim from a place nearby.' },
+                { type: 'arabic', text: ' يَوْمَ يَسْمَعُوْنَ الصَّيْحَةَ بِالْحَقِّ ؕ ذٰلِكَ يَوْمُ الْخُرُوْجِ' },
+                { type: 'text', text: ':42] The day when all will hear the Scream with the truth; this is the day of coming out of the graves.' },
+                { type: 'arabic', text: 'اِنَّا نَحْنُ نُحْیٖ وَنُمِيْتُ وَاِلَيْنَا الْمَصِيْرُ ۙ' },
+                { type: 'text', text: ':43] Indeed it is We Who give life, and give death, and towards Us only is the return.' },
+                { type: 'arabic', text: 'يَوْمَ تَشَقَّقُ الْاَرْضُ عَنْهُمْ سِرَاعًا ؕ ذٰلِكَ حَشْرٌ عَلَيْنَا يَسِيْرٌ' },
+                { type: 'text', text: ':44] On the day when the earth will split for them, so they will come out in haste; this is the gathering - easy for Us.' },
+                { type: 'arabic', text: 'نَحْنُ اَعْلَمُ بِمَا يَقُوْلُوْنَ وَمَاۤ اَنْتَ عَلَيْهِمْ بِجَبَّارٍ ۖ fَذَكِّرْ بِالْقُرْاٰنِ مَنْ يَّخَافُ وَعِيْدِ' },
+                { type: 'text', text: ':45] We well know what they say (O dear Prophet Mohammed), and you are not one to use force over them; therefore advise him with the Qur’an, whoever fears My threat.' }
+              ]
+            }, // <--- This comma connects Surah Qaf to Surah Ar-Rahman
+            {
+              audio1: 'https://server8.mp3quran.net/afs/055.mp3',
+              audio2: 'https://server10.mp3quran.net/minsh/055.mp3',
               content: [
                 { type: 'section-title', text: 'AL RAHMAN' },
                 { type: 'text', text: '(Revealed at Medinah - contains 78 verses - 3 Sections)' },
