--- a/index.html
+++ b/index.html
@@ -3640,11 +3640,12 @@ content: [ { type: 'section-title', text: 'AL MULK (THE KINGSHIP)' },
   <script type="text/babel">
       const { useState, useEffect, Fragment, useRef } = React;
 
-      // ICONS
+      // --- ICONS ---
       const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
       const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5"><path d="m15 18-6-6 6-6"/></svg>;
       const IconMenu = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="18" x2="21" y2="18"/></svg>;
       const IconFont = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><polyline points="4 7 4 4 20 4 20 7"/><line x1="9" y1="20" x2="15" y2="20"/><line x1="12" y1="4" x2="12" y2="20"/></svg>;
+      const IconBell = ({active}) => <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke={active ? "#C5A059" : "currentColor"} strokeWidth="2" className={active ? "animate-bounce" : "opacity-30"}><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/><path d="M13.73 21a2 2 0 0 1-3.46 0"/></svg>;
 
       const THEMES = {
         standard: { id: 'standard', bg: '#051F22', text: '#E2D1A7', card: '#06282d', accent: '#C5A059', name: 'Standard' },
@@ -3663,9 +3664,11 @@ content: [ { type: 'section-title', text: 'AL MULK (THE KINGSHIP)' },
         const [isDarkMode, setIsDarkMode] = useState(true);
         const [showTranslation, setShowTranslation] = useState(true); 
         
-        // SALAH STATES
-        const [salahTimes, setSalahTimes] = useState(null);
+        // --- SALAH ADVANCED STATES ---
+        const [salahData, setSalahData] = useState(null);
         const [loadingSalah, setLoadingSalah] = useState(false);
+        const [city, setCity] = useState(localStorage.getItem('userCity') || 'London');
+        const [remindersEnabled, setRemindersEnabled] = useState(JSON.parse(localStorage.getItem('salahNotif')) || false);
 
         const [isPlaying, setIsPlaying] = useState(false);
         const [activeAudioUrl, setActiveAudioUrl] = useState(null);
@@ -3684,19 +3687,37 @@ content: [ { type: 'section-title', text: 'AL MULK (THE KINGSHIP)' },
           return () => audio.removeEventListener('ended', end);
         }, []);
 
-        // FETCH SALAH TIMES AUTOMATICALLY
-        useEffect(() => {
-          if (activePageId === 'salah') {
-            setLoadingSalah(true);
-            fetch('https://api.aladhan.com/v1/timingsByCity?city=London&country=UK&method=2')
-              .then(res => res.json())
-              .then(data => {
-                setSalahTimes(data.data.timings);
-                setLoadingSalah(false);
-              })
-              .catch(() => setLoadingSalah(false));
+        // FETCH SALAH TIMES LOGIC
+        const getSalahTimes = async (lat = null, lon = null) => {
+          setLoadingSalah(true);
+          let url = `https://api.aladhan.com/v1/timingsByCity?city=${city}&country=UK&method=2&school=1`; // school=1 is Hanafi
+          if (lat && lon) {
+            url = `https://api.aladhan.com/v1/timings?latitude=${lat}&longitude=${lon}&method=2&school=1`;
           }
-        }, [activePageId]);
+
+          try {
+            const res = await fetch(url);
+            const data = await res.json();
+            setSalahData(data.data);
+            setLoadingSalah(false);
+          } catch (e) {
+            console.error("Salah fetch failed", e);
+            setLoadingSalah(false);
+          }
+        };
+
+        const detectLocation = () => {
+          if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition((pos) => {
+              getSalahTimes(pos.coords.latitude, pos.coords.longitude);
+              setCity("Detected Town");
+            });
+          }
+        };
+
+        useEffect(() => {
+          if (activePageId === 'salah') getSalahTimes();
+        }, [activePageId, city]);
 
         useEffect(() => { if (scrollRef.current) scrollRef.current.scrollTop = 0; }, [activePageId, selectedSurahIdx]);
 
@@ -3740,42 +3761,90 @@ content: [ { type: 'section-title', text: 'AL MULK (THE KINGSHIP)' },
           }
         };
 
-        // SALAH TIMES PAGE (FIXED FOR MACBOOK)
+        // --- NEW REAL-TIME SALAH PAGE ---
         const renderSalahTimes = () => {
-          const prayers = [
-            { id: 'Fajr', name: 'Fajr' },
-            { id: 'Sunrise', name: 'Sunrise' },
-            { id: 'Dhuhr', name: 'Dhuhr' },
-            { id: 'Asr', name: 'Asr' },
-            { id: 'Maghrib', name: 'Maghrib' },
-            { id: 'Isha', name: 'Isha' }
+          const pList = [
+            { id: 'Fajr', label: 'Fajr' },
+            { id: 'Sunrise', label: 'Shrook' },
+            { id: 'Dhuhr', label: 'Duher' },
+            { id: 'Asr', label: 'Asr (Hanafi)' },
+            { id: 'Maghrib', label: 'Maghrib' },
+            { id: 'Isha', label: 'Isha' }
           ];
+
+          const toggleNotifications = () => {
+            if (!remindersEnabled) {
+              Notification.requestPermission().then(perm => {
+                if (perm === 'granted') {
+                  setRemindersEnabled(true);
+                  localStorage.setItem('salahNotif', true);
+                }
+              });
+            } else {
+              setRemindersEnabled(false);
+              localStorage.setItem('salahNotif', false);
+            }
+          };
 
           return (
             <div className="flex flex-col h-full overflow-hidden" style={{backgroundColor: theme.bg}}>
               <div className="app-header">
                 <div className="header-content" style={{color: theme.accent}}>
                   <button onClick={() => setActivePageId(null)} className="absolute left-5 p-1"><IconBack /></button>
-                  <h1 className="font-bold text-[12px] uppercase">Salah Times</h1>
+                  <h1 className="font-bold text-[11px] uppercase tracking-widest">Salah Schedule</h1>
+                  <button onClick={toggleNotifications} className="absolute right-5 p-1">
+                    <IconBell active={remindersEnabled} />
+                  </button>
                 </div>
               </div>
-              <main className="main-content flex justify-center py-8">
-                <div className="w-full max-w-md px-6">
-                  <div className="mihrab-container !min-h-0 !m-0 !pt-12 !pb-10 flex flex-col items-center">
+
+              <main className="main-content flex justify-center py-4 px-6">
+                <div className="w-full max-w-md">
+                  
+                  {/* DATE INFO */}
+                  <div className="text-center mb-6">
+                    <p className="text-[var(--gold)] text-[10px] uppercase tracking-[3px] mb-1">
+                      {salahData ? salahData.date.hijri.weekday.en : '...'}
+                    </p>
+                    <h2 className="text-white text-xl font-bold">
+                      {salahData ? `${salahData.date.hijri.day} ${salahData.date.hijri.month.en} ${salahData.date.hijri.year} AH` : 'Loading...'}
+                    </h2>
+                    <p className="text-white opacity-40 text-[11px] mt-1">{salahData ? salahData.date.readable : ''}</p>
+                  </div>
+
+                  {/* CITY DROPDOWN */}
+                  <div className="flex flex-col gap-2 mb-8">
+                    <select 
+                      value={city} 
+                      onChange={(e) => {setCity(e.target.value); localStorage.setItem('userCity', e.target.value);}}
+                      className="bg-black/40 text-[var(--gold)] border border-[var(--gold)]/20 rounded-xl px-4 py-3 text-sm outline-none appearance-none text-center"
+                    >
+                      <option value="London">London, UK</option>
+                      <option value="Bolton">Bolton, UK</option>
+                      <option value="Blackburn">Blackburn, UK</option>
+                      <option value="Manchester">Manchester, UK</option>
+                      <option value="Birmingham">Birmingham, UK</option>
+                      <option value="Makkah">Makkah, SA</option>
+                      <option value="Medina">Medina, SA</option>
+                    </select>
+                    <button onClick={detectLocation} className="text-[10px] text-[var(--light-gold)] opacity-60 uppercase tracking-widest underline">📍 Use My Location</button>
+                  </div>
+
+                  {/* SALAH CARDS */}
+                  <div className="mihrab-container !min-h-0 !m-0 !pt-12 !pb-10 flex flex-col items-center !rounded-[60px_60px_30px_30px]">
                     {loadingSalah ? (
-                      <p className="text-center text-[var(--gold)] animate-pulse">Fetching times...</p>
-                    ) : salahTimes ? (
-                      <div className="w-full space-y-6 px-4">
-                        {prayers.map(p => (
-                          <div key={p.id} className="flex justify-between items-center border-b border-white/10 pb-4">
-                            <span className="text-[var(--light-gold)] font-bold tracking-widest uppercase text-xs">{p.name}</span>
-                            <span className="text-[var(--gold)] text-2xl font-['Cinzel']">{salahTimes[p.id]}</span>
+                      <p className="text-center text-[var(--gold)] py-20 animate-pulse uppercase text-[10px] tracking-widest">Refreshing Times...</p>
+                    ) : salahData ? (
+                      <div className="w-full space-y-4 px-4">
+                        {pList.map(p => (
+                          <div key={p.id} className="flex justify-between items-center bg-white/5 border border-white/5 p-4 rounded-2xl shadow-xl">
+                            <span className="text-[var(--light-gold)] font-bold text-xs uppercase tracking-tighter">{p.label}</span>
+                            <span className="text-[var(--gold)] text-2xl font-['Cinzel']">{salahData.timings[p.id]}</span>
                           </div>
                         ))}
-                        <p className="text-[10px] text-center opacity-40 mt-6" style={{color: theme.text}}>London, UK</p>
                       </div>
                     ) : (
-                      <p className="text-center text-red-400">Please check internet connection.</p>
+                      <p className="text-center text-red-400 py-10">Check Connection</p>
                     )}
                   </div>
                 </div>
