Fix spelling of 'Al-Imran' in Surah list

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       const SURAHS_LIST = [
         { id: 1, name: "Al-Fatihah", ar: "الفاتحة", verses: 7, pageId: 'pquran_1' },
         { id: 2, name: "Al-Baqarah", ar: "البقرة", verses: 286, pageId: 'pquran_2' },
-        { id: 3, name: "AALE I`MRAN ", ar: "آل عمران", verses: 200, pageId: 'pquran_3' },
+        { id: 3, name: "Al- IMRAN ", ar: "آل عمران", verses: 200, pageId: 'pquran_3' },
         { id: 36, name: "Yaa-Seen", ar: "يس", verses: 83, origin: "Makkiyah", para: 22 },
         { id: 48, name: "Al Fath", ar: "الفتح", verses: 29, origin: "Madaniyah", para: 26 },
         { id: 18, name: "Al-Kahf", ar: "الكهف", verses: 110, origin: "Makkiyah", para: 15 },        
@@ -1270,7 +1270,7 @@
       "audio1": "https://server8.mp3quran.net/afs/003.mp3",
       "audio2": "https://server10.mp3quran.net/minsh/003.mp3",
       "content": [
-        { "type": "section-title", "text": "AALE I`MRAN (THE FAMILY OF I`MRAN)" },
+        { "type": "section-title", "text": "All- IMRAN (THE FAMILY OF I`MRAN)" },
         { "type": "text", "text": "(Revealed at Medinah - contains 200 verses - 20 sections)" },
         {
           "type": "arabic",
