--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       .surah-card { background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(197, 160, 89, 0.3); margin: 8px 16px; border-radius: 12px; display: flex; align-items: center; padding: 15px; }
       .surah-num-box { width: 45px; height: 45px; border: 2px solid var(--gold); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: var(--gold); font-weight: bold; margin-right: 15px; font-size: 16px; flex-shrink: 0; }
       .surah-info { display: flex; flex-direction: column; align-items: flex-start; }
-      .surah-en-name { color: var(--light-gold); font-size: 18px; font-weight: bold; line-height: 1.2; }
-      .surah-v-count { color: rgba(197, 160, 89, 0.6); font-size: 11px; text-transform: uppercase; margin-top: 2px; }
+      .surah-en-name { color: var(--light-gold); font-size: 18px; font-weight: bold; }
+      .surah-v-count { color: rgba(197, 160, 89, 0.6); font-size: 11px; text-transform: uppercase; }
       .surah-ar-name { font-family: 'Amiri', serif; color: var(--light-gold); font-size: 26px; margin-left: auto; }
 
       .verse-row { padding: 25px 20px; border-bottom: 1px solid rgba(197, 160, 89, 0.1); }
@@ -6230,8 +6230,6 @@ const App = () => {
   const [isReadingMode, setIsReadingMode] = useState(false);
   const [targetId, setTargetId] = useState(null);
   const [showBookmarkAlert, setShowBookmarkAlert] = useState(false);
-  
-  // RESTORED BOOKMARKS 
   const [bookmarks, setBookmarks] = useState(() => {
       const saved = localStorage.getItem('qalb_faves_final_v12');
       return saved ? JSON.parse(saved) : [];
@@ -6243,13 +6241,14 @@ const App = () => {
   const [showTranslation, setShowTranslation] = useState(true); 
   const [searchVal, setSearchVal] = useState("");
   
-  // SALAH LOGIC
+  // SALAH DATA
   const [salah, setSalah] = useState(null);
   const [nextP, setNextP] = useState({ name: "Fajr", time: "00:00", diff: "00:00:00" });
   const [hDate, setHDate] = useState("");
-  const [loc, setLoc] = useState("Search City...");
+  const [loc, setLoc] = useState("Bolton, UK");
   const [cityIn, setCityIn] = useState("");
-
+  const [isPlaying, setIsPlaying] = useState(false);
+  const [activeAudioUrl, setActiveAudioUrl] = useState(null);
   const audioRef = useRef(new Audio());
   const scrollRef = useRef(null);
 
@@ -6261,16 +6260,33 @@ const App = () => {
     }
   }, []);
 
+  useEffect(() => {
+    const audio = audioRef.current;
+    const end = () => { setIsPlaying(false); setActiveAudioUrl(null); };
+    audio.addEventListener('ended', end);
+    return () => audio.removeEventListener('ended', end);
+  }, []);
+
+  const toggleAudio = (url) => {
+    if (activeAudioUrl === url && isPlaying) {
+      audioRef.current.pause(); setIsPlaying(false);
+    } else {
+      if (activeAudioUrl !== url) { audioRef.current.src = url; setActiveAudioUrl(url); }
+      audioRef.current.play(); setIsPlaying(true);
+    }
+  };
+
   const getByCoords = async (lat, lng) => {
     try {
-      const res = await fetch(`https://api.aladhan.com/v1/timings?latitude=${lat}&longitude=${lng}&method=2&school=1`);
+      // METHOD 3 = MWL (Global Standard), SCHOOL 1 = HANAFI, ADJ 3 = ANGLE BASED (Fix for UK Summer)
+      const res = await fetch(`https://api.aladhan.com/v1/timings?latitude=${lat}&longitude=${lng}&method=3&school=1&latitudeAdjustmentMethod=3`);
       const d = await res.json(); updateUI(d);
     } catch(e) {}
   };
 
   const getByCity = async (c) => {
     try {
-      const res = await fetch(`https://api.aladhan.com/v1/timingsByCity?city=${c}&country=&method=2&school=1`);
+      const res = await fetch(`https://api.aladhan.com/v1/timingsByCity?city=${c}&country=&method=3&school=1&latitudeAdjustmentMethod=3`);
       const d = await res.json(); updateUI(d);
     } catch(e) { setLoc("Not Found"); }
   };
@@ -6319,7 +6335,6 @@ const App = () => {
   };
 
   const removeBookmark = (key) => setBookmarks(bookmarks.filter(b => b.key !== key));
-  
   const handleJump = (val) => {
     setSearchVal(val);
     const target = document.querySelector(`[data-verse-num="${val}"]`);
@@ -6345,14 +6360,14 @@ const App = () => {
     const today = new Date().toLocaleDateString('en-GB', { weekday:'long', day:'numeric', month:'short' });
     return (
       <div className="flex flex-col h-full overflow-hidden" style={{backgroundColor: theme.bg}}>
-        <div className="app-header"><div className="header-content" style={{color: theme.accent}}><button onClick={() => setActivePageId(null)} className="absolute left-5 p-1"><IconBack /></button><div className="text-xs uppercase font-bold tracking-widest">Salah Times</div></div></div>
-        <div className="search-bar-container"><input type="text" placeholder="Type City (e.g. Kozhikode)" className="quran-search-input" value={cityIn} onChange={e => setCityIn(e.target.value)} onKeyDown={e => e.key==='Enter' && getByCity(cityIn)} /></div>
+        <div className="app-header"><div className="header-content" style={{color: theme.accent}}><button onClick={() => setActivePageId(null)} className="absolute left-5 p-1"><IconBack /></button><div className="text-xs uppercase font-bold tracking-widest">Salah Schedule</div></div></div>
+        <div className="search-bar-container"><input type="text" placeholder="Search City..." className="quran-search-input" value={cityIn} onChange={e => setCityIn(e.target.value)} onKeyDown={e => e.key==='Enter' && getByCity(cityIn)} /></div>
         <main className="main-content pt-4 pb-12">
             <div className="salah-header"><div><div className="loc-text">📍 {loc}</div><div className="date-text">{today}</div></div><div className="hijri-text-sm">{hDate}</div></div>
             <div className="hero-card"><span className="text-[10px] text-white/50 font-bold tracking-widest block mb-2 uppercase">Next Prayer</span><div className="hero-p-name">{nextP.name}</div><div className="hero-timer">{nextP.diff}</div><div className="text-white/40 text-xs">Begins at {nextP.time}</div></div>
             {salah ? ["Fajr", "Sunrise", "Dhuhr", "Asr", "Maghrib", "Isha"].map(p => (
                 <div key={p} className={`p-card ${nextP.name === p ? 'active' : ''}`}><span className="p-name-txt">{p}</span><span className="p-time-txt">{salah[p]}</span></div>
-            )) : <div className="text-center p-20 opacity-20">Enter City Above</div>}
+            )) : <div className="text-center p-20 opacity-20">Gathering times...</div>}
         </main>
       </div>
     );
@@ -6377,13 +6392,20 @@ const App = () => {
     return (
       <div className="flex flex-col h-full overflow-hidden" style={{backgroundColor: theme.bg}}>
         <div className="app-header">
-            <div className="header-content" style={{color: theme.accent}}><button onClick={() => {setSelectedSurahIdx(null); setSearchVal("");}} className="absolute left-5 p-1"><IconBack /></button><h1 className="font-bold text-[12px] uppercase">{SURAHS_LIST[selectedSurahIdx]?.name}</h1><button onClick={() => setShowSettings(true)} className="absolute right-5 p-1"><IconSettings /></button></div>
+            <div className="header-content" style={{color: theme.accent}}><button onClick={() => {setSelectedSurahIdx(null); setSearchVal(""); audioRef.current.pause(); setIsPlaying(false);}} className="absolute left-5 p-1"><IconBack /></button><h1 className="font-bold text-[12px] uppercase">{SURAHS_LIST[selectedSurahIdx]?.name}</h1><button onClick={() => setShowSettings(true)} className="absolute right-5 p-1"><IconSettings /></button></div>
             <div className="search-bar-container"><input type="number" placeholder="Enter Verse..." className="quran-search-input" value={searchVal} onChange={(e) => handleJump(e.target.value)} /></div>
         </div>
-        <main ref={scrollRef} className="main-content"><div className="max-w-2xl mx-auto">{card?.content.map((block, bIdx) => {
-            let isV = block.type.includes('arabic'); if(isV) vCount++;
-            return <div key={bIdx} data-verse-num={isV ? vCount : null} onDoubleClick={() => handleSave(`Verse ${vCount}`, 'pquran', `v-${vCount}`)} className="verse-row">{renderBlock(block, bIdx)}</div>
-        })}<div className="h-24" /></div></main>
+        <main ref={scrollRef} className="main-content"><div className="max-w-2xl mx-auto">
+            {(card?.audio1 || card?.audio2) && (
+                <div className="flex gap-3 p-4">
+                    {card.audio1 && (<button onClick={() => toggleAudio(card.audio1)} className="flex-1 p-3 bg-white/5 border rounded-xl text-[10px] font-bold uppercase" style={{borderColor: theme.accent, color: theme.accent}}>{activeAudioUrl === card.audio1 && isPlaying ? 'Alafasy ❚❚' : 'Alafasy ▶'}</button>)}
+                    {card.audio2 && (<button onClick={() => toggleAudio(card.audio2)} className="flex-1 p-3 bg-white/5 border rounded-xl text-[10px] font-bold uppercase" style={{borderColor: theme.accent, color: theme.accent}}>{activeAudioUrl === card.audio2 && isPlaying ? 'Minshawi ❚❚' : 'Minshawi ▶'}</button>)}
+                </div>
+            )}
+            {card?.content.map((block, bIdx) => {
+                let isV = block.type.includes('arabic'); if(isV) vCount++;
+                return <div key={bIdx} data-verse-num={isV ? vCount : null} onDoubleClick={() => handleSave(`Verse ${vCount}`, 'pquran', `v-${vCount}`)} className="verse-row">{renderBlock(block, bIdx)}</div>
+            })}<div className="h-24" /></div></main>
         <div className="floating-controls"><button onClick={() => {setSelectedSurahIdx(null); setActivePageId(null);}} className="f-btn"><IconMenu /></button><button onClick={() => setShowSettings(true)} className="f-btn"><IconFont /></button></div>
       </div>
     );
@@ -6397,6 +6419,7 @@ const App = () => {
         <div className="app-header"><div className="header-content" style={{color: theme.accent}}><button onClick={() => setActivePageId(null)} className="absolute left-5 p-1"><IconBack /></button><h1 className="font-bold text-[12px] uppercase">{page?.title}</h1><button onClick={() => setShowSettings(true)} className="absolute right-5 p-1"><IconSettings /></button></div></div>
         <main ref={scrollRef} className="main-content px-4 py-6"><div className="max-w-md mx-auto">{page?.cards.map((card, idx) => (
            <div key={idx} id={`dua-${idx}`} onDoubleClick={() => handleSave(card.content.find(b=>b.type.includes('title'))?.text || page.title, activePageId, `dua-${idx}`)} className="mb-8 p-6 border rounded-[32px] shadow-xl" style={{backgroundColor: theme.card, borderColor: `${theme.accent}33`}}>
+             {card.audio1 && (<button onClick={() => toggleAudio(card.audio1)} className="w-full p-2 mb-6 bg-black/10 border rounded-xl text-[9px] font-bold uppercase" style={{borderColor: theme.accent, color: theme.accent}}>{activeAudioUrl === card.audio1 && isPlaying ? 'Playing ❚❚' : 'Listen ▶'}</button>)}
              {card.content.map((block, bIdx) => renderBlock(block, bIdx))}
            </div>
         ))}<div className="h-40" /></div></main>
@@ -6415,7 +6438,7 @@ const App = () => {
         <div className="flex flex-col h-full overflow-hidden" style={{backgroundColor: theme.bg}}>
           <div className="app-header"><div className="header-content" style={{color: theme.accent}}><button onClick={() => setActivePageId(null)} className="absolute left-5 p-1"><IconBack /></button><h1 className="font-bold text-[12px] uppercase">{page?.title}</h1><button onClick={() => setShowSettings(true)} className="absolute right-5 p-1"><IconSettings /></button></div></div>
           <main className="main-content py-4"><div className="max-w-md mx-auto px-4">{allTitles.map((item, i) => (
-            <div key={i} onClick={() => { setTargetId(item.id); setIsReadingMode(true); }} className="surah-card">
+            <div key={i} onClick={() => { setTargetId(item.id); setIsReadingMode(true); }} className="surah-card cursor-pointer mb-3">
               <div className="surah-num-box">{i+1}</div>
               <div className="surah-info"><span className="surah-en-name">{item.text}</span></div>
               <div className="surah-ar-name text-xl opacity-20">◈</div>
@@ -6451,7 +6474,9 @@ const App = () => {
                 <h3 className="text-center font-bold text-[#C5A059] mb-8 uppercase tracking-widest">Settings</h3>
                 <div className="flex items-center justify-between mb-8 px-4"><span className="text-white text-sm font-bold uppercase">English Translation</span><div onClick={() => setShowTranslation(!showTranslation)} className={`w-14 h-7 rounded-full relative transition-colors ${showTranslation?'bg-[#C5A059]':'bg-gray-600'}`}><div className={`absolute top-1 w-5 h-5 bg-white rounded-full transition-all ${showTranslation?'right-1':'left-1'}`} /></div></div>
                 <div className="mb-8 px-4"><p className="text-[10px] text-[#C5A059] uppercase mb-4 tracking-widest text-center">Font Size</p><div className="flex items-center justify-between bg-black/30 rounded-2xl p-2 border border-white/5"><button onClick={() => setFontScale(s => Math.max(s-2, -6))} className="w-12 h-12 text-white text-2xl">-</button><span className="text-white font-arabic text-xl">بِسْمِ</span><button onClick={() => setFontScale(s => Math.min(s+2, 14))} className="w-12 h-12 text-white text-2xl">+</button></div></div>
+                
                 <div className="mb-6 px-4"><p className="text-[10px] font-bold text-[#C5A059] uppercase mb-4 tracking-widest text-center">Saved Duas</p><div className="max-h-[140px] overflow-y-auto space-y-2">{bookmarks.length === 0 ? <p className="text-white/30 text-[10px] text-center italic">Empty</p> : bookmarks.map((b) => (<div key={b.key} className="w-full flex items-center bg-white/5 rounded-xl border border-white/10 mb-2 overflow-hidden"><button onClick={() => { setActivePageId(b.pageId); setIsReadingMode(true); setTargetId(b.targetId); setShowSettings(false); }} className="flex-1 text-left p-3 text-white text-[11px]">{b.title}</button><button onClick={() => removeBookmark(b.key)} className="p-3 bg-red-500/10"><IconDelete /></button></div>))}</div></div>
+                
                 <div className="mb-8 px-4"><p className="text-[10px] font-bold text-[#C5A059] uppercase mb-4 tracking-widest text-center">Theme Mode</p><div className="grid grid-cols-2 gap-3">{Object.values(THEMES).map(t => (<button key={t.id} onClick={() => setTheme(t)} className={`p-3 rounded-xl border flex items-center gap-3 ${theme.id===t.id?'border-[#C5A059] bg-[#C5A059]/10':'border-white/10 bg-black/20'}`}><span className="text-white text-[10px] font-bold uppercase">{t.name}</span><div className="ml-auto w-4 h-4 rounded" style={{backgroundColor: t.bg}} /></button>))}</div></div>
                 <button onClick={() => setShowAbout(true)} className="dua-btn mb-6 uppercase text-[12px]">About →</button>
                 <button onClick={() => setShowSettings(false)} className="dua-btn font-bold">CLOSE</button>
